<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size4dp"
    android:layout_marginBottom="@dimen/size4dp"
    android:layout_gravity="center"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="@dimen/card_elevation"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="false"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:dividerHorizontal"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="#8beeeeee"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/txtNomeDaVacina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/louis"
                        android:maxLines="3"
                        android:text="@string/vacina"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="@dimen/text_16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText,RtlHardcoded" />


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/btnDose"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Dose"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dose"
                            android:textAlignment="center"
                            />

                    </LinearLayout>
                    <TextView
                        android:id="@+id/txtIdadeRecomendada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Idade Recomendada"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/back" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>