<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/convite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginBottom="@dimen/card_margin_bottom"
    android:layout_marginEnd="@dimen/card_margin_right"
    android:layout_marginLeft="@dimen/card_marign_left"
    android:layout_marginRight="@dimen/card_margin_right"
    android:layout_marginStart="@dimen/card_marign_left"
    android:layout_marginTop="@dimen/card_magin_top"
    tools:ignore="ContentDescription"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:maxWidth="500dp"
        android:maxHeight="500dp"
        android:text="/convite_usado"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:background="#6f000000"
        android:visibility="gone"
        android:id="@+id/convites_usado"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:maxWidth="500dp">

        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:textStyle="bold"
                android:textColor="@color/branco"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/text_16sp"
                android:maxLines="1"
                android:text="Aviso"
                android:id="@+id/convites_categoria"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/size4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        app:srcCompat="@drawable/erro" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size4dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txtTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@android:color/background_dark"
                        android:textStyle="bold"
                        android:layout_margin="4dp"
                        android:textSize="18sp"
                        android:maxLines="3"
                        tools:text="titulo" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/mm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:textSize="@dimen/text_16sp"
                        android:maxLines="5"
                        tools:text="@string/SimApagarCartaoDeVacinaDescricao"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#eee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:visibility="gone"
                    android:tint="@color/branco"
                    app:srcCompat="@drawable/ic_action_ajuda" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/branco"
                    android:layout_margin="8dp"
                    android:padding="@dimen/size4dp"
                    android:maxLines="2"
                    tools:text="@string/SimApagarCartaoDeVacinaDescricao" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/sim"
                android:id="@+id/txtSim"/>

            <View
                android:id="@+id/viewSeparador"
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="#9a9999" />


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/nao"
                android:id="@+id/txtNao"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>

